--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     implementation "org.springframework:spring-jdbc:$springVersion"
     implementation "org.springframework:spring-tx:$springVersion"
 
+    implementation"jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:2.0.0"
+    implementation"org.glassfish.web:jakarta.servlet.jsp.jstl:2.0.0"
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
